--- a/afs/templates/views/components/workflows/project-collection-workflow/project-collection-final-step.htm
+++ b/afs/templates/views/components/workflows/project-collection-workflow/project-collection-final-step.htm
@@ -28,7 +28,7 @@
     </div>
 
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Used Physical Things' %}</h5>
+        <h5 class="summary-value">{% trans 'Physical Things' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <!-- ko foreach: collectionOfParentPhysThings -->
