--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -113,7 +113,9 @@
                                     "
                                 >
                                     <!-- ko foreach: $data.filteredAnalysisAreaInstances -->
-                                        <tr data-bind="
+                                        <tr style="cursor: pointer;" 
+                                            data-bind="
+                                                click: function() { $parent.selectAnalysisAreaInstance($data); }
                                                 scrollTo: $parent.selectedAnalysisAreaInstance() && $parent.selectedAnalysisAreaInstance().tileid === $data.tileid,
                                                 style: {
                                                     background: (function() {
@@ -126,7 +128,7 @@
                                         >
                                             <td style="cursor: pointer;" class="map-card-feature-tool">
                                                 <a href="javascript:void(0);"
-                                                    data-bind="click: function() { $parent.selectAnalysisAreaInstance($data); }, clickBubble: false">
+                                                    data-bind="click: function() { $parent.editAnalysisAreaInstance($data); }, clickBubble: false">
                                                     <i class="fa fa-pencil map-card-feature-edit"></i>
                                                     {% trans "Edit" %}
                                                 </a>
