Move observation location to description tab, remove extra reference to observed object #936

--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -87,7 +87,7 @@
 
                         <!-- ko if: collectionOfRelatedObjects().length -->
                         <div class="afs-report-subsection" >
-                            <div>
+                            <div class="firstchild-container">
                                 <div class="afs-table pad-btm">
                                     <table class="table table-striped" cellspacing="0" width="100%">
                                         <thead>
