--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -115,6 +115,18 @@
                             </div>
                         </div>
                         <!-- /ko -->
+                        <!-- ko if: Array.isArray(annotation.info) -->
+                        <div data-bind="with: annotation, as: 'annotation', noChildContext: true">
+                            <div data-bind="component: {
+                                name: 'views/components/reports/scenes/annotation-parts',
+                                params: {
+                                    annotation: annotation,
+                                    selectedAnnotationTileId: selectedAnnotationTileId,
+                                    annotationTableHeader: annotationTableHeader,
+                                    annotationTableConfig: annotationTableConfig,
+                                }}"></div>
+                        </div>
+                        <!-- /ko -->
                     </div>
                 </div>
             </div>
