Use substance scene for project timeline #1007

--- a/afs/templates/views/components/reports/project.htm
+++ b/afs/templates/views/components/reports/project.htm
@@ -196,12 +196,15 @@
 
         <!-- Dates -->
         <div data-bind="component: {
-            name: 'views/components/reports/scenes/default',
+            name: 'views/components/reports/scenes/substance',
             params: {
-                data: timeSpanSearchData,
+                data: resource,
+                dataConfig: substanceDataConfig
             }
         }"></div>
+
         <!-- Activity Type -->
+        
         <!-- Parent Project -->
         <!-- Project Team -->
         <!-- Statements -->
