--- a/afs/templates/views/components/reports/project.htm
+++ b/afs/templates/views/components/reports/project.htm
@@ -248,7 +248,7 @@
                                 </thead>
                                 <tbody data-bind="dataTablesForEach: { data: statementsSearchData, dataTableOptions: threeWideTableConfig }">
                                     <tr>
-                                        <td data-bind="text: content"></td>
+                                        <td id="project-search-statement-content" data-bind="text: content"></td>
                                         <td data-bind="text: type"></td>
                                         <td data-bind="text: language"></td>
                                     </tr>
