Fix main report location tab, #1004

--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -74,7 +74,7 @@
                 params: {
                     geojson: geojson,
                     resourceInstanceId: reportMetadata().resourceinstanceid,
-                    locationCards: locationCards,
+                    cards: locationCards,
                 }
             }"></div>
         </div>   
