--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -34,8 +34,8 @@
     <div class="iiif-image-tools upload-dataset-select-dataset-files">
         <!--ko if: annotations().length > 0-->
         <div style="width:100%; display: flex; justify-content: center;">
-            <button class="btn btn-md btn-mint" data-bind="visible: !self.showDatasetDetails(), click: function(){self.showDatasetDetails(true)}">{% trans "Show Selected Dataset Details" %}</button>
-            <button class="btn btn-md btn-mint" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">{% trans "Show Dataset List" %}</button>
+            <button class="btn btn-md btn-mint" data-bind="visible: !self.showDatasetDetails(), click: function(){self.showDatasetDetails(true)}">{% trans "Show Selected Area Dataset Details" %}</button>
+            <button class="btn btn-md btn-mint" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">{% trans "Show Sampled Area List" %}</button>
         </div>
         <div style="margin-top:10px" data-bind="visible: !self.showDatasetDetails()">
             <label class="control-label">{% trans "Sampled Locations" %}</label>
@@ -48,7 +48,7 @@
                         <!--ko if: self.partFilter() === "" || part.displayname.toLowerCase().includes(self.partFilter().toLowerCase()) -->
                         <div class="panel">
                             <a role="button" data-parent="#parts-panel" aria-expanded="false" data-bind="click: function(){ $parent.showDatasetDetails(true); $parent.selectedPart(part); $parent.showEditDatasetName(false); }, attr: { href: '#' + part.tileid, 'aria-expanded': $index == 0 ? 'true' : 'false' }">
-                                <div style="height: 35px; padding: 10px;" class="file-workbench-file" data-bind="click: function(){}, clickBubble: part.tileid != $parent.selectedPart().tileid, css: {staged: part.tileid === self.selectedPart().tileid }">
+                                <div style="height: 35px; padding: 10px;" class="file-workbench-file">
                                     <span class="file-name manifest-manager-canvas-name" data-bind="text: part.displayname"></span>
                                 </div>
                             </a>
@@ -62,23 +62,26 @@
                     <div class="panel-collapse collapse" data-bind="attr: { id: selectedPart().tileid }, css: { in: $index() == 0}">
                         <label class="control-label" style="padding-top: 5px;">{% trans "Files in Dataset" %}</label>
                         <div class="file-workbench-files" data-bind="foreach: {data: selectedPart().datasetFiles, as: 'file'}">
-                            <div class='file-workbench-file' data-bind="css: {staged: false}">
-                                <i class="fa" data-bind="
-                                    css: { 'fa-check': file.tileId, 'fa-trash': !file.tileId },
-                                    style: { color: file.tileId ? 'green' : 'black' }"></i>
-                                <span class='file-name manifest-manager-canvas-name' data-bind="text: file.name"></span>
+                            <div class='file-workbench-file' style="display: flex;" data-bind="css: {staged: false}">
+                                <div style="flex: 1">
+                                    <i data-bind="visible: self.selectedPartHasCurrentObservation(), click: function(){self.selectedPartHasCurrentObservation() ? $parent.deleteFile(file): console.log('no')}" class="fa fa-trash" style="color: black"></i>
+                                    <span class='file-name manifest-manager-canvas-name' data-bind="text: file.name"></span>
+                                </div>
+                                <div data-bind="visible: !self.selectedPartHasCurrentObservation()">
+                                    <i class="fa fa-lock" style="color: black"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="dataset-name">
                             <label class="control-label">{% trans "Dataset Name*" %}</label>
                             <input type="text" class="form-control" placeholder="Dataset name" data-bind="visible: showEditDatasetName(), enable: self.selectedPartHasCurrentObservation(), textInput: selectedPart().datasetName">
-                            <div data-bind="click: function(){showEditDatasetName(true);}">
-                                <input class="afs-calculated-datasetname" disabled type="text" style="width: 100%;" data-bind="textInput: selectedPart().calcDatasetName"></input>
+                            <div data-bind="click: function(){selectedPartHasCurrentObservation()?showEditDatasetName(true):showEditDatasetName(false)}">
+                                <input class="afs-calculated-datasetname" disabled type="text" style="width: 100%;" data-bind="textInput: selectedPartHasCurrentObservation() ? selectedPart().calcDatasetName : selectedPart().datasetName"></input>
                             </div>
                         </div>
                     </div>
 
-                    <div class="dropzone-photo-upload" style="height: 80px;" data-bind="dropzone: dropzoneOptions">
+                    <div class="dropzone-photo-upload" style="height: 80px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
                         <div class="file-workbench-links">
                             <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
                                 <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span><span>{% trans "to upload files" %}</span>
