Add capability to ask only map from scene, #1004

--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -125,7 +125,7 @@
                     params: {
                         geojson: geojson,
                         resourceInstanceId: reportMetadata().resourceinstanceid,
-                        cards: locationCards,
+                        mapOnly: true,
                     }
                 }"></div>    
             </div>
